# libvmod-hiring

./: Makefile  Makefile.am  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
debian/: changelog  control  dirs
libvmod-hiring-trunk/: Makefile.in  README.rst  config.h.in  vmod-hiring.spec  vmod_hiring.3
src/: Makefile  Makefile.am  Makefile.in  libvmod_hiring.la  vcc_if.c  vcc_if.h  vcc_if.lo  vmod_hiring.c  vmod_hiring.lo  vmod_hiring.man.rst  vmod_hiring.rst  vmod_hiring.vcc
src/.deps/: vcc_if.Plo  vmod_hiring.Plo
src/.libs/: libvmod_hiring.la  libvmod_hiring.lai
src/tests/: test01.vtc
varnish_config_files/: user.vcl  varnish
